Fix #21 (Invisible or very small map)
Additionally added FontAwesome mapicon

--- a/media/css/googlemap-responsive.css
+++ b/media/css/googlemap-responsive.css
@@ -5,7 +5,6 @@ html { height: 100% }
 body { height: 100%; margin: 0; padding: 0 }
 
 .map_canvas {
-	height:	250px;
-	margin:	10px 0px 10px 0px;
-	border: 1px solid grey;
+	width: 100%;
+	height: 300px;
 }
