--- a/media/css/jem.css
+++ b/media/css/jem.css
@@ -201,6 +201,12 @@ div#jem .pointer {
 	cursor:pointer;
 }
 
+/* used for map without api-key */
+div#jem .venue_map {
+	border: 1px solid #000;
+	width:500px;
+}
+
 /**
  * @section headers
  */
